solve dbcontext bug

--- a/Views/Home/Read.cshtml
+++ b/Views/Home/Read.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Display Result";
 }
 
-<h1>View</h1>
+<h1>Your Result</h1>
 
 <div>
-    <h4>Student</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -43,6 +42,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.seating_no">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
