--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,12 +4,23 @@
 
 <div class="text-center">
     <h1 class="display-4"> Welcome 3rd year result</h1>
+@*
+    <form method="get">
+        <label for="seating_no">Seating Number:</label>
+        <input type="text" name="seating_no" id="seating_no" />
+        <button type="submit" asp-action="Read" asp-controller="Home" asp-route-id="">Search</button>
+    </form>
+*@
 
-
-    <p class="lead">Enter your Seating Number to view your result</p>
-    <input type="text" name="SeatingNumber" id="SeatingNumber" class="form-control col-6" />
-    <a asp-area="" asp-controller="Student" asp-action="Read" class="btn btn-primary col-3">
-        Search
-    </a>
+    <form method="post" action="/Home/Read/seating_no">
+        <label for="seating_no">Seating Number:</label>
+        <input type="text" name="seating_no" id="seating_no" />
+        <input type="hidden" name="id" value="" />
+        <button type="submit">Search</button>
+    </form>
 
 </div>
+
+@section Scripts {
+    
+}
