--- a/Views/Home/Read.cshtml
+++ b/Views/Home/Read.cshtml
@@ -34,10 +34,10 @@
             @Html.DisplayFor(model => model.student_case_desc)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.c_flag)
+            @Html.DisplayNameFor(model => model.cflag)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.c_flag)
+            @Html.DisplayFor(model => model.cflag)
         </dd>
     </dl>
 </div>
