--- a/Views/Student/Read.cshtml
+++ b/Views/Student/Read.cshtml
@@ -42,5 +42,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-controller="Home" class="btn btn-secondary">Back to List</a>
 </div>
