--- a/Views/Statistics/Index.cshtml
+++ b/Views/Statistics/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<!-- _Sidebar.cshtml -->
+
 <div class="sidebar bg-light p-4">
     <h3 class="text-center mb-4">📊 Students Statistics</h3>
     <ul class="list-unstyled">
@@ -21,3 +21,7 @@
         <li>⭐ Last Student Degree: @Model.LastStudentDegree</li>
     </ul>
 </div>
+
+
+<a href="/Home/index" class="btn btn-outline-secondary p-2">Back</a>
+<a href="/Statistics/Diagram" class="btn btn-outline-info p-2">Diagrams</a>
