--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,8 +26,12 @@
                         
                         <li class="nav-item">
 							<a class="nav-link text-white" asp-area="" asp-controller="Statistics" asp-action="Index">Statistics</a>
-                        </li>       
-                        
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Statistics" asp-action="Diagram">Diagram</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
