--- a/Views/Student/Read.cshtml
+++ b/Views/Student/Read.cshtml
@@ -9,36 +9,55 @@
 <div>
     <hr />
     <dl class="row">
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.arabic_name)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.arabic_name)
         </dd>
+       
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Percentage)
+        </dt>
+
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Percentage)
+        </dd>
+
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.total_degree)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.total_degree)
         </dd>
+
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.student_case)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.student_case)
         </dd>
+
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.student_case_desc)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.student_case_desc)
         </dd>
+
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.cflag)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.cflag)
         </dd>
+
     </dl>
 </div>
 <div>
